# starrocks

./: CMakeLists.txt
be/src/exprs/agg/: aggregate.h  any_value.h
be/src/exprs/agg/factory/: aggregate_resolver_minmaxany.cpp
be/test/exprs/agg/: aggregate_test.cpp
fe/fe-core/src/main/java/com/starrocks/analysis/: AnalyticExpr.java  Expr.java  FunctionCallExpr.java
fe/fe-core/src/main/java/com/starrocks/catalog/: FunctionSet.java
fe/fe-core/src/main/java/com/starrocks/qe/: SessionVariable.java
fe/fe-core/src/main/java/com/starrocks/sql/analyzer/: AnalyticAnalyzer.java  ExpressionAnalyzer.java  QueryAnalyzer.java  SelectAnalyzer.java
fe/fe-core/src/main/java/com/starrocks/sql/common/: MetaUtils.java
fe/fe-core/src/main/java/com/starrocks/sql/optimizer/cost/: CostModel.java  HashJoinCostModel.java
fe/fe-core/src/main/java/com/starrocks/sql/optimizer/rule/: RuleSet.java
fe/fe-core/src/main/java/com/starrocks/sql/optimizer/statistics/: BinaryPredicateStatisticCalculator.java  PredicateStatisticsCalculator.java  StatisticsCalculator.java  StatisticsEstimateUtils.java
fe/fe-core/src/main/java/com/starrocks/sql/optimizer/transformer/: SqlToScalarOperatorTranslator.java
fe/fe-core/src/main/java/com/starrocks/sql/parser/: AstBuilder.java  StarRocks.g4  StarRocksLex.g4
fe/fe-core/src/main/java/com/starrocks/statistic/: StatisticUtils.java
fe/fe-core/src/test/java/com/starrocks/sql/analyzer/: AnalyzeAggregateTest.java  AnalyzeTestUtil.java
fe/fe-core/src/test/java/com/starrocks/sql/plan/: WindowTest.java
(+1 files in other folders)
